# reggie-bricks-py

./: .gitignore  .serp.json  AGENTS.md  README.md  build-script.sh  databricks.yml  pyproject.toml  reggie-build.sh  scripts.sh
.cursor/: settings.json
.githooks/: pre-commit
build-scripts/: member_project.py  pyproject.toml  pyproject_remove.py  sync_python_versions.py  sync_versions.py  utils.py
dbx-ai/: README.md  pyproject.toml
dbx-ai/src/dbx_ai/: agents.py  dbx_agent.py  flows.py  mail.py  memory.py  models.py  tools.py
dbx-ai/src/dbx_ai/demo/: summarize.py
dbx-ai/src/dbx_ai/tools/: summarize.py
dbx-ai/tests/: client_demo.py  duckduckgo_pydantic_demo.py  test_memory_kv.py
dbx-app-runner/: README.md  pyproject.toml
dbx-app-runner/src/dbx_app_runner/: app.py  app_runner.py  caddy.py  conda.py  docker.py  git.py
dbx-app-runner/tests/: cache_test.py  caddy_test.py  conda_test.py  docker_test.py  git_test.py
dbx-caddy/: README.md  pyproject.toml
dbx-caddy/src/dbx_caddy/: caddy.py
dbx-caddy/tests/: caddy_test.py
dbx-concurio/: README.md  pyproject.toml
dbx-concurio/src/dbx_concurio/: caches.py  execs.py
dbx-core/: README.md  pyproject.toml
dbx-core/src/dbx_core/: funcs.py  imports.py  locks.py  objects.py  parsers.py  paths.py  projects.py  strs.py
dbx-core/tests/: locks_test.py  objects_test.py  paths_test.py  projects_test.py  strs_test.py
dbx-cv/: README.md  pyproject.toml
dbx-cv/src/dbx_cv/: app.py  cams.py
dbx-ip/: README.md  pyproject.toml
dbx-ip/src/dbx_ip/: ips.py
dbx-ip/tests/: ips_test.py
dbx-openapi/: pyproject.toml
dbx-openapi/src/: openapi.py
dbx-openapi/src/dbx_openapi/: openapi.py
dbx-openapi/src/openapi_template/: main.jinja
dbx-postgres/: README.md  pyproject.toml
dbx-postgres/src/dbx_postgres/: local_postgres.py  postgres.py
dbx-reflex/: README.md  pyproject.toml  rxconfig.py
dbx-reflex/src/dbx_reflex/: __init__.py  app.py  components.py  events.py  run.py  runner.py  states.py
dbx-reflex/tests/: test_components.py  test_runner.py
dbx-runtime/: pyproject.toml
dbx-serpapi/: pyproject.toml
dbx-serpapi/src/dbx_serpapi/: serpapis.py
dbx-serpapi/tests/: google_maps_batch_dump.py  google_maps_reviews_batch_dump.py
dbx-tools/: README.md  pyproject.toml
dbx-tools/src/dbx_tools/: __init__.py  catalogs.py  cli.py  clients.py  configs.py  experiments.py  genie.py  metric_views  models.py  platform.py  runtimes.py  warehouses.py
dbx-tools/src/dbx_tools/cli/: reset_pipeline_flow.py
dbx-tools/tests/: ai_extract_test.py  catalogs_test.py  clients_test.py  configs_test.py  dbutils_print.py  funcs_test.py  generate_test.py  genie_query_test.py  genie_query_test2.py  genie_service_test.py  genie_space_async_test.py  genie_space_test.py  runtimes_test.py  test_clients.py  test_clients_warehouse_selection.py  test_configs_apps_oauth_fallback.py  test_metric_views.py  test_migration_delegation_behavior.py  test_runtimes_version.py  test_warehouses.py  test_warehouses_select.py  token_print.py  volume_spark_test.py  warehouse_execute_test.py
demo-cam/: pyproject.toml  rtsp_to_kafka.sh  webcam.html
demo-cam/html/: detections.html  streams.html  webcam.html
demo-cam/src/demo_cam/: app.py  score_and_annotate.py  tally_pizzas.py
demo-iot/: README.md  pyproject.toml
demo-iot/src/demo_iot/: apis.py  app.py  database.py  date_utils.py  events.py  frame_api.py  image_api.py  image_service.py  kafka_consumer.py  models.py
demo-iot/src/demo_iot_generated/: main.py  models.py
demo-iot/tests/: transform_test.py
demo-ka-code/: README.md  pyproject.toml
demo-ka-code/src/demo_ka_code/: workspace_service.py
generators-franchise/: pyproject.toml
generators-franchise/src/generators_franchise/: agreement_default.html  app.py  app3.py  franchise_agreement.py
meraki-cloud/: pyproject.toml
meraki-cloud/src/meraki_cloud/: meraki_client.py
reggie-app-runner/: README.md  pyproject.toml
reggie-app-runner/src/reggie_app_runner/: app.py  app_runner.py  caddy.py  conda.py  docker.py  git.py
reggie-app-runner/tests/: cache_test.py  caddy_test.py  conda_test.py  docker_test.py  test_conda.py  test_git.py
reggie-cache/: pyproject.toml
reggie-cache/src/reggie_cache/: caches.py
reggie-concurio/: README.md  pyproject.toml
reggie-concurio/src/reggie_concurio/: caches.py  execs.py
reggie-core/: README.md  pyproject.toml
reggie-core/src/reggie_core/: __init__.py  inputs.py  logs.py  objects.py  parsers.py  paths.py  projects.py  strs.py
reggie-core/tests/: objects_test.py  projects_test.py  strs_test.py
reggie-cv/: README.md  pyproject.toml
reggie-cv/src/reggie_cv/: app.py
reggie-reflex/: .gitignore  README.md  pyproject.toml  requirements.txt  rxconfig.py
reggie-reflex/src/reggie_reflex/: app.py  events.py  fragments.py  states.py
reggie-reflex/tests/: app_test.py
reggie-syncro/: pyproject.toml
reggie-syncro/src/reggie_syncro/: caches.py
reggie-tools/: README.md  pyproject.toml
reggie-tools-rx/: pyproject.toml
reggie-tools-rx/src/reggie_tools_rx/: events.py
reggie-tools-rx/tests/: for_each_test.py
reggie-tools/src/reggie_tools/: catalogs.py  clients.py  configs.py  funcs.py  genie.py  models.py  runtimes.py
reggie-tools/tests/: ai_extract_test.py  catalogs_test.py  clients_test.py  configs_test.py  funcs_test.py  genie_query_test.py  genie_query_test2.py  genie_service_test.py  genie_space_test.py  image_test.py  runtimes_test.py  test_configs.py  token_print.py  volume_spark_test.py
reggie-zerobus/: pyproject.toml
scripts/: README.md  migrate_to_databricks_tools_core.py  pyproject.toml
scripts/src/scripts/: clean.py  openapi.py  project_commands.py  projects.py  utils.py  workspace.py
scripts/src/scripts/openapi_template/: main.jinja
