[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["lfp-build @ git+https://github.com/regbo/lfp-build-py.git", "pytest"]

[tool.member-project]
project.requires-python = ">=3.12,<3.13"

[tool.pixi.workspace]
name = "reggie-bricks-py"
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-aarch64"]

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
uvr = "uv run"
uvm = "uv run -m"

[tool.pixi.dependencies]
ffmpeg = ">=8.0.1,<9"
caddy = ">=2.10.0,<3"

[tool.uv.workspace]
members = [
    "dbx-app-runner",
    "dbx-concurio",
    "dbx-core",
    "dbx-cv",
    "dbx-reflex",
    "dbx-tools",
    "demo-iot",
]
exclude = ["prpr", "__*", "*.egg-info"]
