[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["lfp-build @ git+https://github.com/regbo/lfp-build-py.git", "pytest"]

[tool.member-project]
project.requires-python = ">=3.12,<3.13"

[tool.uv.workspace]
members = [
    "dbx-ai",
    "dbx-app-runner",
    "dbx-caddy",
    "dbx-concurio",
    "dbx-core",
    "dbx-cv",
    "dbx-postgres",
    "dbx-reflex",
    "dbx-tools",
    "demo-iot",
]
exclude = ["prpr", "__*", "*.egg-info"]
