[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dbx-ai"
version = "0.0.1+revd5112ed"
requires-python = ">=3.11,<3.13"
dependencies = [
    "dbx-tools @ file://${PROJECT_ROOT}/../dbx-tools",
    "pydantic_ai>=1.60",
    "mlflow[databricks]>=3.10.1",
]

[dependency-groups]
dev = [
    "ddgs>=9.12.0",
    "unitycatalog-ai[databricks]",
]

[tool.uv.sources.dbx-tools]
workspace = true
