[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dbx-ai"
version = "0.0.1+reve9520c9"
requires-python = ">=3.11,<3.13"
dependencies = [
    "dbx-tools @ file://${PROJECT_ROOT}/../dbx-tools",
    "pydantic_ai>=1.60,<2.0",
    "logfire>=4.16,<5.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27,<2.0",
]

[dependency-groups]
dev = ["ddgs>=9.12.0", "unitycatalog-ai[databricks]"]

[tool.uv.sources.dbx-tools]
workspace = true
