[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dbx-ai"
version = "0.0.1+rev5c3c44c"
requires-python = ">=3.10.12,<3.13"
dependencies = [
    "dbx-tools @ file://${PROJECT_ROOT}/../dbx-tools",
    "pydantic_ai>=1.60,<1.69",
    "mlflow[databricks]>=3.10.1",
]

[dependency-groups]
dev = ["ddgs>=9.12.0", "unitycatalog-ai[databricks]"]

[tool.uv.sources.dbx-tools]
workspace = true
