[project]
name = "dbx-concurio"
version = "0.0.1+ged195ca"
requires-python = ">=3.12,<3.13"
dependencies = [
    "diskcache",
    "fasteners",
    "dbx-core @ file://${PROJECT_ROOT}/../dbx-core",
]
[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources.dbx-core]
workspace = true
