[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dbx-concurio"
version = "0.0.1+g5c87025"
requires-python = ">=3.12,<3.13"
dependencies = [
    "diskcache",
    "fasteners",
    "dbx-core @ file://${PROJECT_ROOT}/../dbx-core",
]

[tool.uv.sources.dbx-core]
workspace = true
