[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dbx-concurio"
version = "0.0.1+g25f9efb"
requires-python = ">=3.11,<3.13"
dependencies = ["diskcache", "fasteners", "dbx-core"]

[tool.uv.sources.dbx-core]
workspace = true

[tool.basedpyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownMemberType = false
