[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dbx-core"
version = "0.0.1+revb0bcebc"
requires-python = ">=3.10.12,<3.13"
dependencies = [
    "lfp-logging",
    # ``tomllib`` is stdlib from Python 3.11; pull in ``tomli`` as a backport for 3.10.
    "tomli; python_version < '3.11'",
]

[dependency-groups]
dev = ["pydantic>=2.12.5"]
