[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dbx-cv"
version = "0.0.1+gf54493c"
requires-python = ">=3.12,<3.13"
dependencies = [
    "imagehash",
    "opencv_python_headless",
    "dbx-core @ file://${PROJECT_ROOT}/../dbx-core",
    "scikit-image",
]

[tool.uv.sources.dbx-core]
workspace = true
