[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dbx-openapi"
version = "0.0.1+g828f4aa"
requires-python = ">=3.11,<3.13"
dependencies = ["cyclopts"]

[tool.basedpyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownMemberType = false
