[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dbx-postgres"
version = "0.0.1+ga9147b3"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dbx-core @ file://${PROJECT_ROOT}/../dbx-core",
    "sqlalchemy",
    "psycopg[binary]",
    "greenlet",
    "pydantic",
]

[tool.uv.sources.dbx-core]
workspace = true
