[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dbx-reflex"
version = "0.0.1+g6fe966b"
requires-python = ">=3.11,<3.13"
dependencies = [
    "reflex>=0.8.0",
    "dbx-caddy @ file://${PROJECT_ROOT}/../dbx-caddy",
]

[project.scripts]
dbx-reflex-run = "dbx_reflex.run:main"

[tool.uv.sources.dbx-caddy]
workspace = true

[tool.uv_build]
package-dir = "."
packages = [{ include = "dbx_reflex" }]

[tool.basedpyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownMemberType = false
