[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dbx-reflex"
version = "0.0.1+revf23a7b7"
requires-python = ">=3.11,<3.13"
dependencies = ["reflex>=0.8.26"]

[project.scripts]
dbx-reflex-run = "dbx_reflex.run:main"

[tool.uv_build]
package-dir = "."
packages = [{ include = "dbx_reflex" }]
