[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dbx-serpapi"
version = "0.0.1+rev6ad8f31"
requires-python = ">=3.10.12,<3.13"
dependencies = ["dbx-tools @ file://${PROJECT_ROOT}/../dbx-tools", "serpapi"]

[tool.uv.sources.dbx-tools]
workspace = true
