[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dbx-tools"
version = "0.0.1+g25f9efb"
requires-python = ">=3.11,<3.13"
dependencies = [
    "dbx-core",
    #"databricks-tools-core @ git+https://github.com/databricks-solutions/ai-dev-kit.git#subdirectory=databricks-tools-core",
    "databricks-connect>=16.0,<18.0",
    "pydantic",
    "pyyaml",
    "python-dotenv",
]

[dependency-groups]
dev = ["wrapt>=2.0"]

[tool.uv.sources.dbx-core]
workspace = true

[tool.basedpyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownMemberType = false
