[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dbx-tools"
version = "0.0.1+rev6ad8f31"
requires-python = ">=3.10.12,<3.13"
dependencies = [
    "dbx-core @ file://${PROJECT_ROOT}/../dbx-core",
    #"databricks-tools-core @ git+https://github.com/databricks-solutions/ai-dev-kit.git#subdirectory=databricks-tools-core",
    "databricks-connect>=15.1",
    "httpx",
    "pydantic",
    "pyyaml",
    "python-dotenv",
]

[project.optional-dependencies]
dbx = ["coolname"]

[dependency-groups]
dev = ["wrapt>=1.16,<2.0"]

[tool.uv.sources.dbx-core]
workspace = true
