[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "demo-cam"
version = "0.0.1+ga65a96a"
requires-python = ">=3.12,<3.13"
dependencies = [
    "reggie-tools-rx @ file://${PROJECT_ROOT}/../reggie-tools-rx",
    "opencv-python-headless",
]

[tool.uv.sources.reggie-tools-rx]
workspace = true
