[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "demo-iot"
version = "0.0.1+g0b17f8f"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aioreactive",
    "fastapi",
    "humanize",
    "kafka-python",
    "dbx-concurio @ file://${PROJECT_ROOT}/../dbx-concurio",
    "dbx-tools @ file://${PROJECT_ROOT}/../dbx-tools",
    "uvicorn",
    "websockets",
    "sqlalchemy>=2.0.45",
    "psycopg2-binary>=2.9.11",
]

[tool.uv.sources.dbx-tools]
workspace = true

[tool.uv.sources.dbx-concurio]
workspace = true
