[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "demo-iot"
version = "0.0.1+g25f9efb"
requires-python = ">=3.11,<3.13"
dependencies = [
    "aioreactive",
    "fastapi",
    "humanize",
    "kafka-python",
    "dbx-concurio",
    "dbx-tools",
    "uvicorn",
    "websockets",
    "pytimeparse",
    "sqlalchemy>=2.0.45",
    "asyncpg",
    "greenlet",
    "psycopg2-binary>=2.9.11",
    "dateparser>=1.3.0",
]

[tool.uv.sources.dbx-tools]
workspace = true

[tool.uv.sources.dbx-concurio]
workspace = true

[tool.basedpyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownMemberType = false
