[project]
name = "generators-franchise"
version = "0.0.1+gc64263e"
dependencies = [
    "reggie-core @ file://${PROJECT_ROOT}/../reggie-core",
    "reggie-tools @ file://${PROJECT_ROOT}/../reggie-tools",
    "xhtml2pdf",
    "faker",
    "random-address",
    "beautifulsoup4",
    "jinja2",
    "markovify",
]

[tool.uv.sources.reggie-core]
workspace = true

[tool.uv.sources.reggie-tools]
workspace = true
