[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "generators-franchise"
version = "0.0.1+g3b858dc"
dependencies = [
    "reggie-core @ file://${PROJECT_ROOT}/../reggie-core",
    "reggie-tools @ file://${PROJECT_ROOT}/../reggie-tools",
    "xhtml2pdf",
    "faker",
    "random-address",
    "beautifulsoup4",
    "jinja2",
    "markovify"
]
requires-python = ">=3.12,<3.13"

[tool.uv.sources.reggie-core]
workspace = true

[tool.uv.sources.reggie-tools]
workspace = true
