[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "meraki-cloud"
version = "0.0.1+g46bcb4d"
requires-python = ">=3.12,<3.13"
dependencies = [
    "reggie-core @ file://${PROJECT_ROOT}/../reggie-core",
]

[tool.uv.sources.reggie-core]
workspace = true
