[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "reggie-app-runner"
version = "0.0.1+g1e9b402"
dependencies = [
    "reggie-core @ file://${PROJECT_ROOT}/../reggie-core",
    "reggie-tools @ file://${PROJECT_ROOT}/../reggie-tools",
    "dynaconf",
    "pyaml",
    "sh",
    "psutil",
    "requirements-parser",
    "giturlparse",
]
requires-python = ">=3.10"

[tool.uv.sources.reggie-core]
workspace = true

[tool.uv.sources.reggie-tools]
workspace = true
