[project]
name = "reggie-app-runner"
version = "0.0.1+gdbf25f2"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dynaconf",
    "giturlparse",
    "psutil",
    "pyaml",
    "reggie-core @ file://${PROJECT_ROOT}/../reggie-core",
    "reggie-tools @ file://${PROJECT_ROOT}/../reggie-tools",
    "requirements-parser",
    "sh",
]
requires-puvrython = ">=3.12,<3.13"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources.reggie-core]
workspace = true

[tool.uv.sources.reggie-tools]
workspace = true
