[build-system]
requires = [
    "uv_build>=0.8.23,<0.9.0",
]
build-backend = "uv_build"

[project]
name = "reggie-cache"
version = "0.0.1+ge791e69"
requires-python = ">=3.12"
dependencies = [
    "reggie-core @ file://${PROJECT_ROOT}/../reggie-core",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.uv.sources.reggie-core]
workspace = true
