[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "reggie-concurio"
version = "0.0.1+g34c02d6"
dependencies = [
    "reggie-core @ file://${PROJECT_ROOT}/../reggie-core",
    "diskcache",
    "fasteners",
]
requires-python = ">=3.12,<3.13"

[tool.uv.sources.reggie-core]
workspace = true
