[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "reggie-core"
version = "0.0.1+g81193d2"
dependencies = [
    "sitecustomize-entrypoints",
]
requires-python = ">=3.10"

[project.entry-points.sitecustomize]
logs_auto_config = "reggie_core.logs:auto_config"
