[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "reggie-cv"
version = "0.0.1+gc119d0b"
requires-python = ">=3.12,<3.13"
dependencies = [
    "reggie-core @ file://${PROJECT_ROOT}/../reggie-core",
    "scikit-image",
    "imagehash",
    "opencv_python_headless"
]

[tool.uv.sources.reggie-core]
workspace = true
