[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "reggie-reflex"
version = "0.0.1+gf0b5471"
requires-python = ">=3.12,<3.13"
dependencies = [
    "reflex",
    "pydantic>=2.7,<2.11",

]

[tool.uv_build]
package-dir = "."
packages = [
    { include = "reggie_reflex" }
]
