[project]
name = "reggie-reflex"
version = "0.0.1+gb7f5077"
requires-python = ">=3.12,<3.13"
dependencies = [
    # "reflex>=0.7.0,<0.8.0",
    #    "sqlmodel<0.0.22"
    "reflex>=0.8.0",
]
requires-puvrython = ">=3.12,<3.13"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv_build]
package-dir = "."
packages = [{ include = "reggie_reflex" }]
