[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "reggie-tools-rx"
version = "0.0.1+g316602a"
requires-python = ">=3.12,<3.13"
dependencies = [
    "reggie-tools @ file://${PROJECT_ROOT}/../reggie-tools",
    "aioreactive"
]

[tool.uv.sources.reggie-tools]
workspace = true
