[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "reggie-tools"
dependencies = [
    "reggie-core @ file://${PROJECT_ROOT}/../reggie-core",
    "databricks-sdk>=0.73.0",
    "databricks-connect>=17.0,<17.3",
    "pydantic",
]
version = "0.0.1+ga391b68"
requires-python = ">=3.12,<3.13"

[tool.uv.sources.reggie-core]
workspace = true

[tool.member-project]
project.requires-python = ">=3.12,<3.13"
