[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "reggie-tools"
dependencies = [
    "reggie-core @ file://${PROJECT_ROOT}/../reggie-core",
    "databricks-sdk>=0.73.0",
    "databricks-connect>=17.0,<17.3",
    "pydantic",
]
version = "0.0.1+g9afd6c1"
requires-python = ">=3.12,<3.13"

[tool.uv.sources.reggie-core]
workspace = true
