[project]
name = "scripts"
version = "0"
description = "Local build utilities"
dependencies = [
    "tomlkit",
    "python-benedict[toml]",
    "packaging",
    "typer"
]

[tool.uv]
managed = true
skip-build = true

[tool.uv_build]
package = false

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
